--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social-network-links:
   email: "someone@example.com"
 # facebook: daattali
   github: dustiny5.github.io
-  twitter: daattali
+#  twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
