--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://dustiny5.github.io"
+    - Kaggle: "https://www.kaggle.com/"
   Author's home: "https://dustiny5.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
